--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ body{
   color: white;
   font-weight: 600;
 }
+.list {
+  margin-top : 30px;
+  text-align : left;
+  padding-left : 20px;
+  padding-right : 20px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
